extract user, character and spell creation to tesDataFactory.